--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,11 @@ android {
     namespace 'bootcamp.cl.proyecto_agenda'
     compileSdk 33
 
+    buildFeatures {
+        dataBinding true
+    }
+
+
     defaultConfig {
         applicationId "bootcamp.cl.proyecto_agenda"
         minSdk 24
@@ -34,6 +39,25 @@ android {
 
 dependencies {
 
+    def nav_version = "2.5.3"
+
+    // Java language implementation
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
+    // Testing Navigation
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
+    // Jetpack Compose Integration
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -41,10 +65,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    android {
-        buildFeatures {
-            dataBinding true
-        }
-    }
-
 }
+
