--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ android {
 dependencies {
 
     def nav_version = "2.5.3"
+    def room_version = "2.5.0"
+
 
     // Java language implementation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
@@ -74,6 +76,14 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'com.squareup.picasso:picasso:2.8'
+    //implementacion de Room database
+    implementation("androidx.room:room-runtime:$room_version")
+    annotationProcessor("androidx.room:room-compiler:$room_version")
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation("androidx.room:room-ktx:$room_version")
+    //implementacion de corrutinas
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
+
 
 
 
